tests/baselines/reference/numberAssignableToEnum.errors.txt
numberAssignableToEnum.ts(4,1): error TS2322: Type 'number' is not assignable to type 'E'.


==== numberAssignableToEnum.ts (1 errors) ====
    enum E { A }
    var n: number;
    var e: E;
    e = n;
    ~
!!! error TS2322: Type 'number' is not assignable to type 'E'.
    n = e;